version/0.12/_sources/api/solver/_autosummary/settings/local_dt_dualts_relax.rst.txt
:orphan:

.. _local_dt_dualts_relax:

local_dt_dualts_relax
=====================

.. currentmodule:: ansys.fluent.core.solver.settings_231.local_dt_dualts_relax

.. autoclass:: local_dt_dualts_relax
    :show-inheritance:
    :undoc-members:
.. rubric:: Named object type

:ref:`axis_direction_child <axis_direction_child>`


.. rubric:: Included in:

======================================================================================   ===================================================

Parent                                                                                                                               Summary

======================================================================================   ===================================================
:ref:`pseudo_time_explicit_relaxation_factor <pseudo_time_explicit_relaxation_factor>`       'pseudo_time_explicit_relaxation_factor' child.

======================================================================================   ===================================================

