version/0.17/_sources/api/solver/_autosummary/settings/local_dt_dualts_relax.rst.txt
:orphan:

.. _local_dt_dualts_relax:

local_dt_dualts_relax
=====================

.. autoclass:: ansys.fluent.core.solver.settings_232.local_dt_dualts_relax.local_dt_dualts_relax
    :show-inheritance:

.. rubric:: Methods

========================================   ==============================

Method                                                            Summary

========================================   ==============================
:ref:`list <list>`                                        'list' command.

:ref:`list_properties <list_properties>`       'list_properties' command.

:ref:`duplicate <duplicate>`                         'duplicate' command.

========================================   ==============================

.. rubric:: Named object type

:ref:`axis_direction_child <axis_direction_child>`


.. rubric:: Included in:

======================================================================================   ===================================================

Parent                                                                                                                               Summary

======================================================================================   ===================================================
:ref:`pseudo_time_explicit_relaxation_factor <pseudo_time_explicit_relaxation_factor>`       'pseudo_time_explicit_relaxation_factor' child.

======================================================================================   ===================================================

